--- a/src/app/post/editar/editar.component.html
+++ b/src/app/post/editar/editar.component.html
@@ -5,7 +5,7 @@
         <form [formGroup]="editarPost" (ngSubmit)="actualizar()">
 
             <p>Titulo del Post</p>
-            <input type="text" name="" id="" formControlName="id_com">
+            <input type="text" name="" id="" formControlName="t_com">
 
             <p>Descripcion: </p>
             <textarea name="" id="" formControlName="comentario" cols="100" rows="10" placeholder="Escribe aqui tu post" ></textarea>
